<resources>
    <string name="app_name">AppFilms</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="valider">VALIDER</string>
    <string name="s_inscrire">S\'INSCRIRE</string>
    <string name="mot_de_pass_oubli">Mot de pass oublié</string>
    <string name="votre_mot_de_pass">Votre Mot de pass</string>
    <string name="votre_login">Votre Login</string>
    <string name="todo">TODO</string>
</resources>